--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@
 }
 body{
     display: flex;
-    background-image: url(./pexels-moose-photos-1037995.jpg);
+    background-image: url('./images/pexels-moose-photos-1037995.jpg');
     background-size: cover;
     flex-direction: column;
     justify-content: center;
